--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 before_install:
-  - sudo apt-get install ao
-  - sudo apt-get install curl
+  - sudo apt-get install libao-dev
+  - sudo apt-get install libcurl4-openssl-dev
   - sudo apt-get install mpg123
 
 # Enable C++ support
