--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 sudo: required
 before_install:
+  - sudo apt-get upgrade qq
   - sudo apt-get install libao-dev
   - sudo apt-get install libcurl4-openssl-dev
   - sudo apt-get install mpg123
