--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 sudo: required
 before_install:
-  - sudo apt-get update && sudo apt-get -y upgrade
+  - sudo apt-get update 
+  - sudo apt-get -y upgrade
   - sudo apt-get install libao-dev
   - sudo apt-get install libcurl4-openssl-dev
   - sudo apt-get install mpg123
