--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,23 @@
 sudo: required
 before_install:
-  - sudo apt-get install software-properties-common
-  - sudo add-apt-repository ppa:george-edison55/cmake-3.x
-  - sudo apt-get update
-  - sudo apt-get install cmake
-  - sudo apt-get upgrade cmake
   - sudo apt-get install libao-dev
   - sudo apt-get install libcurl4-openssl-dev
   - sudo apt-get install mpg123
 
 # Enable C++ support
 language: cpp
+
 # Compiler selection
 compiler:
   - gcc
+  
+install:
+if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
+  CMAKE_URL="http://www.cmake.org/files/v3.3/cmake-3.3.1-Linux-x86_64.tar.gz"
+  mkdir cmake && travis_retry wget --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
+  export PATH=${DEPS_DIR}/cmake/bin:${PATH}
+fi
+
 # Build steps
 # Test
 script:
