--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ compiler:
   
 install:
   - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
-  - mkdir ${DEPS_DIR}
+  - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
   
   - |
     if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
@@ -21,9 +21,11 @@ install:
       mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
       export PATH=${DEPS_DIR}/cmake/bin:${PATH}
     fi
+  
+  # Go to the Root directory  
+  - cd..
 
 # Build steps
-# Test
 script:
   - mkdir build
   - cd build
