--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 sudo: required
 before_install:
-  - sudo apt-get install libao
-  - sudo apt-get install libcurl4-openssl
-  - sudo apt-get install libmpg123
+  - sudo apt-get install libao-dev
+  - sudo apt-get install libcurl4-openssl-dev
+  - sudo apt-get install libmpg123-dev
 
 # Enable C++ support
 language: cpp
