--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ before_install:
   - sudo apt-get install libao-dev
   - sudo apt-get install libcurl4-openssl-dev
   - sudo apt-get install libmpg123-dev
-
+  - ./installMPG123.sh
 # Enable C++ support
 language: cpp
 
