--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 before_install:
   - sudo apt-get install libao-dev
   - sudo apt-get install libcurl4-openssl-dev
-  - sudo apt-get install libmpg123-dev
+#   - sudo apt-get install libmpg123-dev
   - chmod +x installMPG123.sh
   - ./installMPG123.sh
 # Enable C++ support
